fix(scrolling): make improvements the the scrolling of the page on smaller devices

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -84,6 +84,9 @@
     }
   }
   @media (max-width: 768px) {
+    .text-zone {
+      top: 40vh;
+    }
     h1 {
       margin-top: 45px;
     }
